# django-polls-tutorial

./: .gitignore  requirements.txt
django-polls/: LICENSE  pyproject.toml
django-polls/django_polls/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
django-polls/django_polls/migrations/: 0001_initial.py  0002_alter_question_pub_date.py
django-polls/django_polls/static/polls/css/: style.css
django-polls/django_polls/static/polls/images/: background.avif
django-polls/django_polls/templates/polls/: base.html  detail.html  index.html  results.html
django-polls/docs/source/: conf.py  index.rst
mysite/: settings.py  urls.py
